--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paquete-estadistica-cf",
+  "name": "@kmn04MX/paquete-estadistica-cf",
   "version": "1.0.0",
   "description": "Funciones estadisticas y generacion de graficas con Node.js",
   "main": "index.js",
